# compiler_principle

./: .gitignore  CFG_data.cpp  CMakeLists.txt  MyParser.hpp  compiler.hpp  main.cpp  readme.md  test.cpp
constructor/: AbstractAutomata.java  Automata.java  CFG.java  CMakeLists.txt  Constructor.java  DFA.java  DFA_factory.java  NFA.java  NonTerminal.java  Operator.java  ScannerBuilder.java  abstractState.java  element.java  elementFactory.java  nfaFactory.java  production.java  reParser.java  scanner_part1.txt  scanner_part2.txt  tokenInfo.java  token_list.txt
include/: compiler.h
parser/: CMakeLists.txt  MyParser.hpp
productions/: CMakeLists.txt  Productions.cc  Productions.h  Productions.hpp  production_printer.cpp
semantic/: AST.cpp  AST.h  CMakeLists.txt  Csymbols.hpp  NameSpace.cpp  NameSpace.h  ProductionInfo.cpp  ProductionInfo.h  symbols.hpp
test_input/: test1_type.c  test2_quicksort.c  test3_error.c  test_in.c  test_in.txt
token/: CMakeLists.txt  Scanner2.cpp  Scanner2.h  Token.hpp  TokenActions.h  TokenInput.cc  TokenInput.h  TokenInput.hpp  TokenTableWrapper.cpp  scanner.cpp  scanner.h
usr-defined/: CMakeLists.txt  C_rule_attr_initializer.cpp  GlobalContext.cpp  GlobalContext.h
usr-defined/attributes/: AttrContext.cpp  AttrContext.h  CMakeLists.txt  CNameSpace.cpp  CNameSpace.h  CSymbolTable.cpp  CSymbolTable.h  C_constant.cpp  C_constant.h  C_constant_impl.h  C_rule_attr.cpp  C_rule_attr.h  C_type.cpp  C_type.h  Csymbols.hpp
usr-defined/attributes/attribute_rules/: CMakeLists.txt  attr_rule.cpp  attr_rule.hpp  attr_rule_addExpr.hpp  attr_rule_compound_stmt.h  attr_rule_decl.h  attr_rule_do_nothing.h  attr_rule_error.h  attr_rule_expr.cpp  attr_rule_expr.h  attr_rule_func.h  attr_rule_init_declarator_list.cpp  attr_rule_init_declarator_list.h  attr_rule_jump.h  attr_rule_para_list.h  attr_rule_params.h  attr_rule_select.h  attr_rule_selection_stmt.h  attr_rule_type_spec.h  attr_rule_while.h  attr_rules.hpp
usr-defined/attributes/symbols/: C_expr.hpp
usr-defined/code_generation/: CMakeLists.txt  C_rule_code.cpp  C_rule_code.h  codeGenerator.cpp  codeGenerator.h  code_gen_Context.cpp  code_gen_Context.h  code_gen_productionInfo.cpp  code_gen_productionInfo.h
usr-defined/code_generation/code_rules/: CMakeLists.txt  gen_code_add2mul.hpp  gen_code_and2eq.hpp  gen_code_assign.hpp  gen_code_assign2cond.hpp  gen_code_block1.hpp  gen_code_block2.hpp  gen_code_blocklist1.hpp  gen_code_blocklist2.hpp  gen_code_castexp2unary.hpp  gen_code_compstmt1.hpp  gen_code_compstmt2.hpp  gen_code_cond2logicOr.hpp  gen_code_decl1.hpp  gen_code_decl2.hpp  gen_code_declist1.hpp  gen_code_declist2.hpp  gen_code_eq2rel.hpp  gen_code_exdel.hpp  gen_code_expr2assign1.hpp  gen_code_expr2assign2.hpp  gen_code_exprstmt1.hpp  gen_code_exprstmt2.hpp  gen_code_identifier.hpp  gen_code_if_statement.hpp  gen_code_jumpexpr.hpp  gen_code_logic_or.hpp  gen_code_logic_or2and.hpp  gen_code_logicand2or.hpp  gen_code_loop_statement.hpp  gen_code_mul2unary.hpp  gen_code_or2xor.hpp  gen_code_postfix.hpp  gen_code_primary.h  gen_code_rel2sh.hpp  gen_code_rule_BinaryOpExpr.h  gen_code_rule_addExpr.hpp  gen_code_rule_andExpr.hpp  gen_code_rule_divExpr.hpp  gen_code_rule_eqExpr.hpp  (+18 more)
usr-defined/productions/: CMakeLists.txt  CProductions.cc  CProductions.h  CProductionsRule.cpp  C_production_printer.cpp  default_production.cpp
usr-defined/token_actions/: CMakeLists.txt  CTokenActions.cpp  CTokenActions.h  CTokenTable.h  CTokenWriter.cpp
